[gd_scene load_steps=10 format=3 uid="uid://b130pq5vy0rhc"]

[ext_resource type="Script" uid="uid://dkc3vm5vw7sqh" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://255vwo0cilpw" path="res://mob.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dj61wxx620472" path="res://coin.tscn" id="3_5vw27"]
[ext_resource type="Texture2D" uid="uid://dj8ry15wrdkr6" path="res://art/pyramid.png" id="3_272bh"]
[ext_resource type="PackedScene" uid="uid://cyexyyy41w7n3" path="res://player.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://d00ema7b0kyyw" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="AudioStream" uid="uid://bwec6h0kj1yn" path="res://art/House In a Forest Loop.ogg" id="5_7mycd"]
[ext_resource type="AudioStream" uid="uid://b40o16l7f24wb" path="res://art/gameover.wav" id="6_272bh"]

[sub_resource type="Curve2D" id="Curve2D_7mycd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
mob_scene = ExtResource("2_1bvp3")
coin_scene = ExtResource("3_5vw27")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(240, 357)
scale = Vector2(0.46875, 0.46875)
texture = ExtResource("3_272bh")

[node name="Player" parent="." instance=ExtResource("3_lquwl")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="ItemPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_7mycd")

[node name="ItemSpawnLocation" type="PathFollow2D" parent="ItemPath"]
position = Vector2(-0.0860596, 0)

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7mycd")
parameters/looping = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_272bh")

[connection signal="collect" from="Player" to="." method="_on_player_collect"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
